# ctoh

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml
src/: ctoh.lib.cppm  enum.cppm  functions.cppm  main.cpp  run.cppm  shared.cppm  structs.cppm  typedefs.cppm  unions.cppm
test/: simple.c  typedefs.c
